Added functions and AddUser Page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,7 +2,7 @@
   <ion-navbar color="secondary">
   <ion-title> <img src = "assets/imgs/logo.png" /> </ion-title>
   <ion-buttons end>
-    <button ion-button icon-only (click)="  ()"><ion-icon name="add-circle"></ion-icon></button>
+    <button ion-button icon-only (click)="addUser()"><ion-icon name="add-circle"></ion-icon></button>
   </ion-buttons>
   </ion-navbar>
 </ion-header>
